--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </div>
    <div id="fa">
     <ul>
-   <il class="ha"><a  href="PROJETO EDUCATIVO.html">HOME</a></il>
+   <il class="ha"><a  href="index.html">HOME</a></il>
    <il class="ha"><a href="servi.html">SERCISOS</a></il>  
    <il class="ha"><a href="about.html">SOBRES</a></il>  
    <il class="ha"><a href="cont.html">CONTACTOS</a></il>
@@ -26,7 +26,7 @@
 </ul>
 </div>
   
-</nav>
+</nav>>
    <div id="letra"> <h1>Desbloqueie a jornada de aprendizagem <br> global do seu filho </h1>
  <p>Experimente uma aprendizagem universal e multidisciplinar para além da sala de aula. Fomentar o <br> crescimento, a compreensão cultural e</p></div>
 <div id="links"><div id="ins"><a href="#">Inscreva-se agora</a></div>
